<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/kh_thongtin"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="5dp"
        android:text="@string/kh_haveaccount"
        android:textColor="#C5C4C3"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:paddingHorizontal="15dp"
        android:paddingTop="5dp">

        <EditText
            android:id="@+id/txt_name_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/cus_corner_radius"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:hint="@string/kh_name"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_phone_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/cus_corner_radius"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:hint="@string/kh_sdt"
            android:inputType="phone"
            android:padding="10dp"
            android:text="@null"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_address_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/cus_corner_radius"
            android:drawableLeft="@drawable/ic_location"
            android:drawablePadding="10dp"
            android:hint="@string/kh_diachi"
            android:padding="10dp"
            android:text="@null"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txt_password_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/cus_corner_radius"
            android:drawableLeft="@drawable/ic_change_password"
            android:drawablePadding="10dp"
            android:hint="@string/kh_pass"
            android:inputType="numberPassword"
            android:padding="10dp"
            android:text="@null"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_pay_cart_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/cus_btn_corner_radius"
            android:padding="20dp"
            android:text="@string/btn_pay"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cart_customer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cus_btn_corner_white"
            android:padding="10dp"
            android:text="@string/nav_cart"
            android:textColor="@color/purple_200" />
    </LinearLayout>
</LinearLayout>